fixed the issue of unwanted space appearing below the footer on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,12 @@ html, body {
     overflow-y: auto;
     height: 100%;
     width: 100%;
+}
+
+body {
     background-color: rgb(24, 24, 32);
 }
 
-main {
-}
 
 .heading {
     font-size: 3rem;
@@ -439,8 +440,6 @@ main {
     background-color: rgba(30, 30, 41, 1);
     font-weight: 600;
     font-size: 1.2rem;
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 80px;
 }
